--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 <body>
     <h1>Karl Pilkington Quote Generator</h1>
     <h2>Press the button to read the ramblings of a madman</h2>
-    <div id="quoteArea"></div>
-    <button onclick="newQuote()" type="button" name="button">Generate!</button>
+    <div id="quoteArea">
+        <p id="quote"></p>
+        <p id="person"></p>
+    </div>
+    <button id="generator" type="button" name="button">Generate!</button>
 </body>
 
 </html>
