Added Tweet option

--- a/index.html
+++ b/index.html
@@ -12,11 +12,15 @@
 <body>
     <h1>Karl Pilkington Quote Generator</h1>
     <h2>Press the button to read the ramblings of a madman</h2>
-    <div id="quoteArea">
+    <div id="quote-area">
         <p id="quote"></p>
         <p id="person"></p>
     </div>
     <button id="generator" type="button" name="button">Generate!</button>
+    <div>
+        <a class="tweet" href="" target="_blank">
+          <button id="tweet-button" name="button">Twat it!</button></a>
+      </div>
 </body>
 
 </html>
