Added tweets using Twitter Post Fetcher

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a class="tweet" href="" target="_blank">
             <button id="tweet-button" name="button">Twat it!</button></a>
     </div>
+    <div id="KP-quotes"></div>
 </body>
 
 </html>
