Deleted tweet array DOM test

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Quote Generator</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="script.js"></script>
+    <script src="TPF.js"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,14 +15,13 @@
     <h2>Press the button to read the ramblings of a madman</h2>
     <div id="quote-area">
         <p id="quote"></p>
-        <p id="person"></p>
+        <p id="person"> – Karl Pilkington</p>
     </div>
     <button id="generator" type="button" name="button">Generate!</button>
     <div>
         <a class="tweet" href="" target="_blank">
             <button id="tweet-button" name="button">Twat it!</button></a>
     </div>
-    <div id="KP-quotes"></div>
 </body>
 
 </html>
