--- a/index.html
+++ b/index.html
@@ -3,24 +3,25 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Quote Generator</title>
+    <title>Karl Pilkington Quote Generator</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
     <script src="script.js"></script>
     <script src="TPF.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
     <h1>Karl Pilkington Quote Generator</h1>
-    <h2>Press the button to read the ramblings of a madman</h2>
+    <h2>The ramblings of a madman</h2>
     <div id="quote-area">
         <p id="quote"></p>
         <p id="person"> – Karl Pilkington</p>
     </div>
-    <button id="generator" type="button" name="button">Generate!</button>
+    <button class="btn btn-primary" id="generator" type="button" name="button">Generate!</button>
     <div>
         <a class="tweet" href="" target="_blank">
-            <button id="tweet-button" name="button">Twat it!</button></a>
+            <button class="btn btn-info" id="tweet-button" name="button">Twat it!</button></a>
     </div>
 </body>
 
